[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dogesec_commons"
version = "0.0.5"
authors = [
  { name="DOGESEC", email="noreply@dogesec.com" },
]
description = "A package containing views we reuse between various DOGESEC products"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.27.2",
    "python-arango>=8.1.3; python_version >= '3.8'",
    "stix2",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Homepage = "https://github.com/muchdogesec/stixifier_commons"
Issues = "https://github.com/muchdogesec/stixifier_commons/issues"

[project.optional-dependencies]
stixifier = [
    "txt2stix",
    "file2txt",
    "stix2arango",
]