[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dogesec_commons"
version = "0.0.7-rc1"
authors = [
  { name = "dogesec", email = "noreply@dogesec.com" }
]
maintainers = [
  { name = "dogesec", email = "noreply@dogesec.com" }
]
description = "A package containing views we reuse between various dogesec products"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.27.2",
    "python-arango>=8.1.3; python_version >= '3.8'",
    "django-filter>=24.2",
    "stix2",
    "psycopg2-binary",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Homepage = "https://github.com/muchdogesec/dogesec_commons"
Issues = "https://github.com/muchdogesec/dogesec_commons/issues"
"dogesec HQ" = "https://dogesec.com"


[project.optional-dependencies]
stixifier = [
    "txt2stix",
    "file2txt",
    "stix2arango",
]

test = [
    "pytest",
    "pytest-subtests",
    "pytest-cov",
    "pytest-django",
    "stix2arango @ https://github.com/muchdogesec/stix2arango/releases/download/add-codecov-2025-06-02-14-40-14/stix2arango-0.0.4rc0-py3-none-any.whl",
    "txt2stix @ https://github.com/muchdogesec/txt2stix/releases/download/main-2025-05-31-06-10-31/txt2stix-0.0.3rc0-py3-none-any.whl",
    "file2txt @ https://github.com/muchdogesec/file2txt/releases/download/main-2024-11-29-15-39-43/file2txt-0.0.1b2-py3-none-any.whl"
]